--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,6 +33,9 @@
         <action
             android:id="@+id/action_newPostFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_newPostFragment_to_newPostPartTwoFragment"
+            app:destination="@id/newPostTwo_Layout" />
     </fragment>
     <fragment
         android:id="@+id/myProfileFragment"
@@ -72,4 +75,9 @@
             android:id="@+id/action_homeFragment_to_newPostFragment"
             app:destination="@id/newPostFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/newPostTwo_Layout"
+        android:name="com.example.quickjobs.newPostPartTwoFragment"
+        android:label="fragment_new_post_part_two"
+        tools:layout="@layout/fragment_new_post_part_two" />
 </navigation>
