--- a/app/src/main/res/layout/fragment_new_post_part_two.xml
+++ b/app/src/main/res/layout/fragment_new_post_part_two.xml
@@ -12,85 +12,112 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/newPostPartTwo_Description_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
-            android:text="Description:"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/newPostPartTwo_description_cardView"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/newPostPartTwo_description_cardView"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="50dp"
-            android:background="#FFFFFF"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_Description_textView">
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/newPostPartTwo_descriptionbox_textView"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Description text"
-                android:textSize="18sp" />
-        </androidx.cardview.widget.CardView>
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/newPostPartTwo_Amount_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="Amount:"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/newPostPartTwo_description_cardView"
-            app:layout_constraintStart_toStartOf="@+id/newPostPartTwo_description_cardView"
-            app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_description_cardView" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/newPostPartTwo_Amount_cardView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/newPostPartTwo_Amount_textView"
-            app:layout_constraintStart_toStartOf="@+id/newPostPartTwo_Amount_textView"
-            app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_Amount_textView">
+                    <TextView
+                        android:id="@+id/newPostPartTwo_Description_textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="64dp"
+                        android:text="Description:"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="@+id/newPostPartTwo_description_cardView"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/newPostPartTwo_Amount_editTextNumberDecimal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="numberDecimal"
-                android:text="$" />
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/newPostPartTwo_description_cardView"
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginEnd="32dp"
+                        android:background="#FFFFFF"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_Description_textView">
 
-        </androidx.cardview.widget.CardView>
+                        <TextView
+                            android:id="@+id/newPostPartTwo_descriptionbox_textView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Description text"
+                            android:textSize="18sp" />
+                    </androidx.cardview.widget.CardView>
 
-        <CheckBox
-            android:id="@+id/newPostPartTwo_perHour_checkBox"
-            android:layout_width="100dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="8dp"
-            android:background="#7E57C2 "
-            android:buttonTint="#EDE7F6 "
-            android:text="Per Hour"
-            android:textColor="#EDE7F6 "
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/newPostPartTwo_Amount_cardView"
-            app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_Amount_cardView" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <CheckBox
+                        android:id="@+id/newPostPartTwo_perHour_checkBox"
+                        android:layout_width="100dp"
+                        android:layout_height="34dp"
+                        android:background="#7E57C2 "
+                        android:buttonTint="#EDE7F6 "
+                        android:text="Per Hour"
+                        android:textColor="#EDE7F6 "
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="@+id/newPostPartTwo_Amount_cardView"
+                        app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_Amount_cardView" />
+
+                    <TextView
+                        android:id="@+id/newPostPartTwo_Amount_textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="100dp"
+                        android:text="Amount:"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="@+id/newPostPartTwo_Amount_cardView"
+                        app:layout_constraintStart_toStartOf="@+id/newPostPartTwo_Amount_cardView"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/newPostPartTwo_Amount_cardView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_Amount_textView">
+
+                        <EditText
+                            android:id="@+id/newPostPartTwo_Amount_editTextNumberDecimal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:inputType="numberDecimal"
+                            android:text="$" />
+
+                    </androidx.cardview.widget.CardView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </LinearLayout>
+        </ScrollView>
 
         <FrameLayout
-            android:layout_width="409dp"
-            android:layout_height="220dp"
+            android:id="@+id/frameLayout3"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
             android:background="#C5CAE9 "
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -103,12 +130,11 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="64dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <Button
                         android:id="@+id/newPostPartTwo_Previous_Button"
