--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -211,11 +211,11 @@
                         android:text="Title:"
                         android:textSize="18sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@+id/newPost_titletext_textView"
+                        app:layout_constraintStart_toStartOf="@+id/newPost_titletext_EditText"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/newPost_titletext_textView"
+                    <EditText
+                        android:id="@+id/newPost_titletext_EditText"
                         android:layout_width="360dp"
                         android:layout_height="wrap_content"
                         android:background="#FFFFFF"
@@ -223,8 +223,7 @@
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/newPost_Title_textView"
-                        tools:text="Title text" />
+                        app:layout_constraintTop_toBottomOf="@+id/newPost_Title_textView" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -234,7 +233,7 @@
         <FrameLayout
             android:id="@+id/newPost_next_frameLayout"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:background="#C5CAE9 "
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -246,9 +245,9 @@
 
                 <Button
                     android:id="@+id/newPost_Next_button"
-                    android:layout_width="150dp"
+                    android:layout_width="200dp"
                     android:layout_height="64dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="32dp"
                     android:backgroundTint="#512DA8   "
                     android:text="Next"
                     android:textColor="#B39DDB "
