--- a/app/src/main/res/layout/fragment_new_post_part_two.xml
+++ b/app/src/main/res/layout/fragment_new_post_part_two.xml
@@ -15,6 +15,9 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:nestedScrollingEnabled="true"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbars="horizontal"
             app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,12 +55,18 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_Description_textView">
 
-                        <TextView
-                            android:id="@+id/newPostPartTwo_descriptionbox_textView"
-                            android:layout_width="wrap_content"
+                        <EditText
+                            android:id="@+id/editTextTextMultiLine"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Description text"
-                            android:textSize="18sp" />
+                            android:backgroundTint="#FFFFFF"
+                            android:bufferType="normal"
+                            android:ems="10"
+                            android:gravity="start|top"
+                            android:inputType="textMultiLine"
+                            android:textColorHighlight="#E0E0E0 "
+                            android:textSize="14sp"
+                            tools:text="Description text" />
                     </androidx.cardview.widget.CardView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -117,7 +126,7 @@
         <FrameLayout
             android:id="@+id/frameLayout3"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:background="#C5CAE9 "
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -130,8 +139,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="32dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
