--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,32 +10,21 @@
         android:label="fragment_my_jobs"
         tools:layout="@layout/fragment_my_jobs">
         <action
-            android:id="@+id/action_myJobsFragment_to_newPostFragment"
-            app:destination="@id/newPostFragment" />
-        <action
             android:id="@+id/action_myJobsFragment_to_myProfileFragment"
-            app:destination="@id/myProfileFragment" />
+            app:destination="@id/myProfileFragment"
+            app:launchSingleTop="true" />
         <action
             android:id="@+id/action_myJobsFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/newPostFragment"
-        android:name="com.example.quickjobs.newPostFragment"
-        android:label="fragment_new_post"
-        tools:layout="@layout/fragment_new_post">
+            app:destination="@id/homeFragment"
+            app:launchSingleTop="true">
+            <action
+                android:id="@+id/action_action_myJobsFragment_to_homeFragment_to_newPostActivity"
+                app:destination="@id/newPostActivity" />
+        </action>
         <action
-            android:id="@+id/action_newPostFragment_to_myJobsFragment"
-            app:destination="@id/myJobsFragment" />
-        <action
-            android:id="@+id/action_newPostFragment_to_myProfileFragment"
-            app:destination="@id/myProfileFragment" />
-        <action
-            android:id="@+id/action_newPostFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_newPostFragment_to_newPostPartTwoFragment"
-            app:destination="@id/newPostTwo_Layout" />
+            android:id="@+id/action_myJobsFragment_to_newPostActivity"
+            app:destination="@id/newPostActivity"
+            app:launchSingleTop="true" />
     </fragment>
     <fragment
         android:id="@+id/myProfileFragment"
@@ -44,16 +33,19 @@
         tools:layout="@layout/fragment_my_profile">
         <action
             android:id="@+id/action_myProfileFragment_to_myJobsFragment"
-            app:destination="@id/myJobsFragment" />
-        <action
-            android:id="@+id/action_myProfileFragment_to_newPostFragment"
-            app:destination="@id/newPostFragment" />
+            app:destination="@id/myJobsFragment"
+            app:launchSingleTop="true" />
         <action
             android:id="@+id/action_myProfileFragment_to_editProfileFragment"
             app:destination="@id/editProfileFragment" />
         <action
             android:id="@+id/action_myProfileFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:launchSingleTop="true" />
+        <action
+            android:id="@+id/action_myProfileFragment_to_newPostActivity"
+            app:destination="@id/newPostActivity"
+            app:launchSingleTop="true" />
     </fragment>
     <fragment
         android:id="@+id/editProfileFragment"
@@ -67,17 +59,20 @@
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_myJobsFragment"
-            app:destination="@id/myJobsFragment" />
+            app:destination="@id/myJobsFragment"
+            app:launchSingleTop="true" />
         <action
             android:id="@+id/action_homeFragment_to_myProfileFragment"
-            app:destination="@id/myProfileFragment" />
+            app:destination="@id/myProfileFragment"
+            app:launchSingleTop="true" />
         <action
-            android:id="@+id/action_homeFragment_to_newPostFragment"
-            app:destination="@id/newPostFragment" />
+            android:id="@+id/action_homeFragment_to_newPostActivity"
+            app:destination="@id/newPostActivity"
+            app:launchSingleTop="true" />
     </fragment>
-    <fragment
-        android:id="@+id/newPostTwo_Layout"
-        android:name="com.example.quickjobs.newPostPartTwoFragment"
-        android:label="fragment_new_post_part_two"
-        tools:layout="@layout/fragment_new_post_part_two" />
+    <activity
+        android:id="@+id/newPostActivity"
+        android:name="com.example.quickjobs.newPostActivity"
+        android:label="activity_new_post"
+        tools:layout="@layout/activity_new_post" />
 </navigation>
