Started QuickJobsTheme located in res/values/styles, added authentication, translate returned FirebaseUser to QuickJobsUser located in activity.

--- a/app/src/main/res/layout/fragment_my_jobs.xml
+++ b/app/src/main/res/layout/fragment_my_jobs.xml
@@ -5,7 +5,7 @@
     android:id="@+id/myJobs_ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyJobsFragment">
+    tools:context=".view.content.MyJobsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomNavigationView"
