--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -5,7 +5,7 @@
     android:id="@+id/newPost_ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".newPostFragment">
+    tools:context=".view.content.newPostFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomNavigationView"
