--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -5,7 +5,7 @@
     android:id="@+id/newPostNavigationHostFragoment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.jobs.newPostActivity">
+    tools:context=".view.jobs.NewPostActivity">
 
     <fragment
         android:id="@+id/fragment"
