--- a/app/src/main/res/layout/fragment_new_post_part_two.xml
+++ b/app/src/main/res/layout/fragment_new_post_part_two.xml
@@ -56,7 +56,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/newPostPartTwo_Description_textView">
 
                         <EditText
-                            android:id="@+id/editTextTextMultiLine"
+                            android:id="@+id/newPostPartTwo_description_editTextTextMultiLine"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:backgroundTint="#FFFFFF"
@@ -162,6 +162,7 @@
                         android:layout_height="64dp"
                         android:layout_marginStart="32dp"
                         android:backgroundTint="#512DA8   "
+                        android:enabled="false"
                         android:text="Next"
                         android:textColor="#B39DDB "
                         android:textSize="18sp"
