--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:alpha="0.6"
     android:background="#EFEFEF"
-    tools:context=".view.jobs.CameraActivity">
+    tools:context=".view.camera.CameraActivity">
 
 
     <androidx.camera.view.PreviewView
