--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/settings"
+        android:id="@+id/account_preferences"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
