--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -106,99 +106,15 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="100dp"
+                    android:orientation="horizontal">
 
-                    <FrameLayout
-                        android:id="@+id/frameLayout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:animationCache="true"
-                        android:background="#D1C4E9 "
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:id="@+id/linearLayout3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="0dp"
-                            android:backgroundTint="#E0E0E0">
-
-                            <ImageView
-                                android:id="@+id/newPost_image1_imageView"
-                                android:layout_width="72dp"
-                                android:layout_height="72dp"
-                                android:background="#9E9E9E"
-                                android:baselineAlignBottom="true"
-                                android:scaleType="center"
-                                android:src="@drawable/baseline_image_black_48"
-                                android:tint="#E0E0E0"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                            <ImageView
-                                android:id="@+id/newPost_image2_imageView"
-                                android:layout_width="72dp"
-                                android:layout_height="72dp"
-                                android:background="#9E9E9E"
-                                android:baselineAlignBottom="true"
-                                android:src="@drawable/baseline_image_black_48"
-                                android:tint="#E0E0E0"
-                                app:layout_constraintBaseline_toBaselineOf="@+id/newPost_image1_imageView"
-                                app:layout_constraintStart_toEndOf="@+id/newPost_image1_imageView" />
-
-                            <ImageView
-                                android:id="@+id/newPost_image3_imageView"
-                                android:layout_width="72dp"
-                                android:layout_height="72dp"
-                                android:background="#9E9E9E"
-                                android:baselineAlignBottom="true"
-                                android:src="@drawable/baseline_image_black_48"
-                                android:tint="#E0E0E0"
-                                app:layout_constraintBaseline_toBaselineOf="@+id/newPost_image2_imageView"
-                                app:layout_constraintStart_toEndOf="@+id/newPost_image2_imageView" />
-
-                            <ImageView
-                                android:id="@+id/newPost_image4_imageView"
-                                android:layout_width="72dp"
-                                android:layout_height="72dp"
-                                android:background="#9E9E9E"
-                                android:baselineAlignBottom="true"
-                                android:src="@drawable/baseline_image_black_48"
-                                android:tint="#E0E0E0"
-                                app:layout_constraintBaseline_toBaselineOf="@+id/newPost_image3_imageView"
-                                app:layout_constraintStart_toEndOf="@+id/newPost_image3_imageView" />
-
-                            <ImageView
-                                android:id="@+id/newPost_image5_imageView"
-                                android:layout_width="72dp"
-                                android:layout_height="72dp"
-                                android:background="#9E9E9E"
-                                android:baselineAlignBottom="true"
-                                android:src="@drawable/baseline_image_black_48"
-                                android:tint="#E0E0E0"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/newPost_image1_imageView" />
-
-                            <ImageView
-                                android:id="@+id/newPost_image6_imageView"
-                                android:layout_width="72dp"
-                                android:layout_height="72dp"
-                                android:background="#9E9E9E"
-                                android:baselineAlignBottom="true"
-                                android:src="@drawable/baseline_image_black_48"
-                                android:tint="#E0E0E0"
-                                app:layout_constraintStart_toEndOf="@+id/newPost_image5_imageView"
-                                app:layout_constraintTop_toBottomOf="@+id/newPost_image1_imageView" />
-
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-                    </FrameLayout>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
