--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -4,75 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/homeFragment">
+
     <fragment
         android:id="@+id/myJobsFragment"
-        android:name="com.example.quickjobs.view.profile.MyJobsFragment"
+        android:name="com.example.quickjobs.view.jobs.MyJobsFragment"
         android:label="fragment_my_jobs"
         tools:layout="@layout/fragment_my_jobs">
         <action
-            android:id="@+id/action_myJobsFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_myJobsFragment_to_myProfileFragment"
-            app:destination="@id/myProfileFragment" />
-        <action
-            android:id="@+id/action_myJobsFragment_to_newPostActivity"
-            app:destination="@id/newPostActivity" />
+            android:id="@+id/myjobs_to_anon"
+            app:destination="@id/anonymousUserRestrictedFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true"/>
     </fragment>
+
     <fragment
         android:id="@+id/myProfileFragment"
         android:name="com.example.quickjobs.view.profile.MyProfileFragment"
         android:label="fragment_my_profile"
         tools:layout="@layout/fragment_my_profile">
         <action
-            android:id="@+id/action_myProfileFragment_to_editProfileFragment"
-            app:destination="@id/editProfileFragment" />
-        <action
-            android:id="@+id/action_myProfileFragment_to_myJobsFragment"
-            app:destination="@id/myJobsFragment" />
-        <action
-            android:id="@+id/action_myProfileFragment_to_newPostActivity"
-            app:destination="@id/newPostActivity" />
-        <action
-            android:id="@+id/action_myProfileFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/myprof_to_anon"
+            app:destination="@id/anonymousUserRestrictedFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true"/>
     </fragment>
-    <fragment
-        android:id="@+id/editProfileFragment"
-        android:name="com.example.quickjobs.view.profile.EditProfileFragment"
-        android:label="fragment_edit_profile"
-        tools:layout="@layout/fragment_edit_profile" />
+
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.quickjobs.view.main.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_homeFragment_to_myProfileFragment"
-            app:destination="@id/myProfileFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_newPostActivity"
-            app:destination="@id/newPostActivity" />
-        <action
-            android:id="@+id/action_homeFragment_to_anonymousUserProfileFragment"
-            app:destination="@id/anonymousUserProfileFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_myJobFragment"
-            app:destination="@id/myJobFragment" />
+            android:id="@+id/home_to_anon"
+            app:destination="@id/anonymousUserRestrictedFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true"/>
     </fragment>
-    <activity
-        android:id="@+id/newPostActivity"
-        android:name="com.example.quickjobs.view.jobs.NewPostActivity"
-        android:label="activity_new_post"
-        tools:layout="@layout/activity_new_post" />
+
     <fragment
-        android:id="@+id/anonymousUserProfileFragment"
+        android:id="@+id/anonymousUserRestrictedFragment"
         android:name="com.example.quickjobs.view.auth.AnonymousUserRestrictedFragment"
-        android:label="fragment_anonymous_user_profile"
-        tools:layout="@layout/fragment_anonymous_user_restricted" />
-    <fragment
-        android:id="@+id/myJobFragment"
-        android:name="com.example.quickjobs.MyJobFragment"
-        android:label="fragment_my_job"
-        tools:layout="@layout/fragment_my_job" />
+        android:label="fragment_anonymous_user_restricted"
+        tools:layout="@layout/fragment_anonymous_user_restricted">
+    </fragment>
+
 </navigation>
